@@ -519,7 +519,7 @@ public class VoiceManagerImpl implements VoiceManager, ConfigOptionProvider, Dia
                 .withKS(this.getKS()) //
                 .withSTT(this.getSTT()) //
                 .withTTS(this.getTTS()) //
-                .withHLIs(this.getHLIs()) //
+                .withHLI(this.getHLI()) //
                 .withVoice(this.getDefaultVoice()) //
                 .withMelody(listeningMelody) //
                 .withListeningItem(listeningItem);
@@ -941,8 +941,8 @@ public class VoiceManagerImpl implements VoiceManager, ConfigOptionProvider, Dia
     }
 
     @Override
-    public List<HumanLanguageInterpreter> getHLIsByIds(String ids) {
-        return getHLIsByIds(Arrays.asList(ids.split(",")));
+    public List<HumanLanguageInterpreter> getHLIsByIds(@Nullable String ids) {
+        return ids == null ? List.of() : getHLIsByIds(Arrays.asList(ids.split(",")));
     }
 
     @Override
@@ -1074,7 +1074,7 @@ public class VoiceManagerImpl implements VoiceManager, ConfigOptionProvider, Dia
      */
     private void buildDialogRegistrations() {
         synchronized (dialogRegistrationStorage) {
-            dialogRegistrationStorage.getValues().stream().forEach(dr -> {
+            dialogRegistrationStorage.getValues().forEach(dr -> {
                 if (dr != null && !dialogProcessors.containsKey(dr.sourceId)) {
                     try {
                         startDialog(getDialogContextBuilder() //
